# tembo-images

./: .gitignore  CONTAINER_README.md  Dockerfile  README.md  docker-bake.hcl  docker-entrypoint.sh  manifest.js  sync-volume.sh
.github/actions/build-and-push-to-quay/: action.yml
.github/workflows/: bake.yaml  build_images.yaml  build_tembo_pg_slim.yaml  publish-trunk.yaml
analytics-cnpg/: Cargo.toml  Dockerfile
coredb-pg-base/: Dockerfile
dw-cnpg/: Cargo.toml  Dockerfile
geo-cnpg/: Cargo.toml  Dockerfile
ml/: Cargo.toml  Dockerfile
ml-cnpg/: Cargo.toml  Dockerfile  requirements-xformers.txt  requirements.txt
standard-cnpg/: Cargo.toml  Dockerfile  README.md
tembo-cnpg/: Dockerfile  docker-bake.hcl
tembo-local/: Dockerfile  entrypoint.sh  postgresql.conf
tembo-local-ml/: Dockerfile  enable-extensions.sql  postgresql.conf
tembo-local-slim/: Dockerfile
tembo-pg-cnpg/: Dockerfile  README.md
tembo-pg-slim/: Cargo.toml  Dockerfile  README.md
trunk/: Dockerfile  README.md
