[package]
name = "ml"
version = "15.3.0-1"
edition = "2021"
authors = ["tembo.io"]
description = "Container image for Tembo's ML Stack"
homepage = "https://www.tembo.io"
license = "Apache-2.0"
readme = "README.md"
repository = " https://github.com/tembo-io/tembo-images"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]